# nathair

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  LICENSE.md  Pipfile  README.md  __init__.py  encrypt_sample.py  ftp_banner_grabber.py  ftp_banner_grapper.py  pyproject.toml  requirements-dev.txt  requirements.txt  usb_pcap_hid_parser.py
.github/workflows/: build-pip.yml  build-pipenv.yml  build-poetry.yml  codeql.yml  flake8-lint.yml  lint.yml  pythonapp.yml
crack/: crack.py  dictionary.txt  passwords.txt
crack_zip/: crack_zip.py  password-reference.txt  target-archive-pkzip.txt
docs/: USAGE.md
ftp_banner_grabber/: ftp_banner_grabber.py  vuln_banners.txt
port_scanner/: __init__.py  portscanner.py
rc4_bruteforce/: Pipfile  rc4_bruteforce.py  sample_rc4_encrypted.txt
ssh_botnet/: sshBrute.py  sshBruteKey.py  ssh_botnet.py
virusshare/: Pipfile  virus_md5.py  virusshare_md5_downloader.py
whois_query/: whois_lookup.py
zip crack/: crack_zip.py
