[tool.poetry]
name = "violent_python"
version = "0.1.0"
description = ""
authors = ["axi0m <axi0m@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
rich = "^10.14.0"
cryptography = "^35.0.0"
pexpect = "^4.8.0"
pyzipper = "^0.3.5"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
dlint = "^0.12.0"
pylint = "^2.11.1"
bandit = "^1.7.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
