[tool.poetry]
name = "nathair"
version = "0.1.0"
description = "Assortment of Python information security CLI utilities"
authors = ["axi0m <axi0m@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
rich = "^10.14.0"
cryptography = "^39.0.1"
pexpect = "^4.8.0"
pyzipper = "^0.3.5"
numpy = "^1.21.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
